# ai-coffee-app

./: .copilot  .gitignore  README.md  app.py  coffee.db  coffee_test.db  history.txt  init_db.sql  pyproject.toml  pytest.ini  requirements.txt  run_playwright_e2e.sh
static/: admin_count.js  main.js  style.css
templates/: index.html  login.html  password_change.html  settings.html  settings_flyout.html
tests/: test_app_basic.py  test_auth.py  test_full_app.py  test_password_hash.py  test_user_management.py
tests/playwright/: test_admin_login_password_change.py  test_full_user_flow.py
